share/cascade/test/regression/type_check/fail/issue_60d.v
wire x;
initial begin 
  $display(x, x);
  $finish;
end
